--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1854,7 +1854,11 @@ textarea.fld {
   }
 
   .logo {
-    display: none;
+    background: url('../img/logo-stroked.png') no-repeat center transparent;
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
   }
 
   .filters-bar {
@@ -1899,6 +1903,10 @@ textarea.fld {
 @media (max-width: 500px) {
   .network-error-stripe {
     font-size: 10px;
+  }
+
+  .logo {
+    display: none;
   }
 
   .list-view .dash-item.thumbed .cover {
